--- a/src/app/pages/index/components/not-found/not-found.component.html
+++ b/src/app/pages/index/components/not-found/not-found.component.html
@@ -1,16 +1,22 @@
-<div class="bg-indigo-900 relative overflow-hidden h-screen">
-      <img
-    src="https://external-preview.redd.it/4MddL-315mp40uH18BgGL2-5b6NIPHcDMBSWuN11ynM.jpg?width=960&crop=smart&auto=webp&s=b98d54a43b3dac555df398588a2c791e0f3076d9"
-    class="absolute h-full w-full object-cover" />
-      <div class="inset-0 bg-black opacity-25 absolute">
-        </div>
-      <div class="container mx-auto px-6 md:px-12 relative z-10 flex items-center py-32 xl:py-40">
-            <div class="w-full font-mono flex flex-col items-center relative z-10">
-                  <h1 class="font-extrabold text-5xl text-center text-white leading-tight mt-4">
-          You are all alone here
+<div class=" p-5 relative overflow-hidden h-screen">
+      <div
+    class="container rounded-3xl border-2 border-dashed mx-auto p-10 px-6 md:px-12 relative z-10 flex items-center py-32 xl:py-40">
+    <!-- animated blured divs -->
+    <div
+      class="absolute top-[10%] left-[5%] w-72 h-72 rounded-full bg-red-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
+    </div>
+    <div
+      class="absolute top-[25%] right-[5%] w-72 h-72 rounded-full bg-gray-500 mix-blend-multiply filter blur-3xl animation-delay-4000">
+    </div>
+    <div
+      class="absolute top-[50%] right-[5%] w-72 h-72 rounded-full bg-pink-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
+    </div>
+    <div class="w-full flex flex-col items-center relative z-10">
+                  <h1 class="font-extrabold text-5xl text-center text-gray-600 leading-tight mt-4">
+        المنتج الذي تحاول الوصول اليه غير موجود
                   </h1>
-                  <p class="font-extrabold text-8xl my-44 text-white animate-bounce">
-                        404
+      <p class="font-extrabold text-8xl my-44 text-gray-600 ">
+                       <span> 404 </span> <span class="animate-bounce"> 📡</span>
                     </p>
               </div>
         </div>
