--- a/src/app/pages/dashboard/components/products/products.component.html
+++ b/src/app/pages/dashboard/components/products/products.component.html
@@ -3,43 +3,40 @@
     <!-- Start coding here -->
     <div class="relative  border-2 border-dashed border-gray-200 rounded-3xl">
       <div class="flex flex-col md:flex-row items-center justify-between space-y-3 md:space-y-0 md:space-x-4 p-4 ">
-        <div class="w-full md:w-1/2">
+        <div class="w-full  md:w-1/2">
 
           <form class="flex items-center" [formGroup]="searchForm" (ngSubmit)="handleSearchOverProducts()">
             <input type="search" id="voice-search" formControlName="searchControl"
               class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5  :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-              placeholder="Search with products title..." required>
+              placeholder="ابحث بعنوان المنتج" required>
 
             <button [disabled]="searchForm.invalid" type="submit"
-              class="inline-flex items-center py-2.5 px-3 ml-2 text-sm font-medium text-black bg-gray-200 rounded-3xl border border-white hover:bg-gray-300 focus:ring-4 focus:outline-none focus:ring-black disabled:cursor-not-allowed disabled:bg-gray-300">
+              class="inline-flex items-center py-2.5 px-4 ml-2 text-sm font-medium text-black bg-gray-200 rounded-3xl border border-white hover:bg-gray-300 focus:ring-4 focus:outline-none focus:ring-black disabled:cursor-not-allowed disabled:bg-gray-300">
               <svg aria-hidden="true" class="w-5 h-5 mr-2 -ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                 xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                   d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
-              </svg>Search
+              </svg>بحث
             </button>
           </form>
-          <div class="flex my-4">
-            <p class="mr-4"> Show only</p>
+          <div class="flex flex-row-reverse my-4">
+            <p class="ml-4"> عرض فقط</p>
             <form [formGroup]="showOnlyForm" (change)="handleShowOnlyToggle()" class="flex">
+              
               <div class="flex items-center mr-4">
-                <input id="inline-radio" type="radio" value="All" name="available" formControlName="available"
+                <input id="inline-2-radio" type="radio" [value]="0" name="available" formControlName="available"
                   class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 focus:ring-2 ">
-                <label for="inline-radio" class="ml-2 text-sm font-medium text-gray-900 ">All</label>
+                <label for="inline-2-radio" class="ml-2 text-sm font-medium text-gray-900 ">الغير متاح بالمخزن</label>
               </div>
               <div class="flex items-center mr-4">
                 <input id="inline-radio" type="radio" [value]="1" name="available" formControlName="available"
                   class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 focus:ring-2 ">
-                <label for="inline-radio" class="ml-2 text-sm font-medium text-gray-900 ">Available in
-                  the
-                  stock</label>
+                <label for="inline-radio" class="ml-2 text-sm font-medium text-gray-900 ">المتاح بالمخزن</label>
               </div>
               <div class="flex items-center mr-4">
-                <input id="inline-2-radio" type="radio" [value]="0" name="available" formControlName="available"
+                <input id="inline-radio" type="radio" value="All" name="available" formControlName="available"
                   class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 focus:ring-2 ">
-                <label for="inline-2-radio" class="ml-2 text-sm font-medium text-gray-900 ">Not
-                  Available in the
-                  stock</label>
+                <label for="inline-radio" class="ml-2 text-sm font-medium text-gray-900 ">الجميع</label>
               </div>
             </form>
           </div>
@@ -48,12 +45,12 @@
           class="w-full md:w-auto flex flex-col md:flex-row space-y-2 md:space-y-0 items-stretch md:items-center justify-end md:space-x-3 flex-shrink-0">
           <!-- add product button -->
           <button type="button" (click)="toggleAddProductModal()"
-            class="flex items-center justify-center text-black bg-gray-100 hover:bg-gray-300 focus:ring-4 focus:ring-primary-300 font-medium rounded-3xl text-sm px-4 py-2 ">
+            class="flex items-center justify-center text-black bg-gray-200 hover:bg-gray-300 focus:ring-4 focus:ring-primary-300 font-medium rounded-3xl text-sm px-4 py-2 ">
             <svg class="w-5 h-5 mr-1" data-reader-inline-stroke="" fill="none" stroke="currentColor" stroke-width="1.5"
               viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v12m6-6H6"></path>
             </svg>
-            Add product
+            اضافة منتج
           </button>
           <!-- add product button -->
           <div class="flex items-center space-x-3 w-full md:w-auto ">
@@ -66,7 +63,7 @@
                   d="M3 3a1 1 0 011-1h12a1 1 0 011 1v3a1 1 0 01-.293.707L12 11.414V15a1 1 0 01-.293.707l-2 2A1 1 0 018 17v-5.586L3.293 6.707A1 1 0 013 6V3z"
                   clip-rule="evenodd" />
               </svg>
-              Filter
+              فلتر
               <svg class="-mr-1 ml-1.5 w-5 h-5" fill="currentColor" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"
                 aria-hidden="true">
                 <path clip-rule="evenodd" fill-rule="evenodd"
@@ -90,21 +87,21 @@
       </div>
       <!-- product table -->
       <div class="overflow-x-auto">
-        <table class="w-full text-sm text-left text-gray-500">
+        <table class="w-full  text-center text-gray-500">
           <thead class="text-xs text-gray-700 uppercase bg-gray-50 ">
             <tr>
-              <th scope="col" class="px-4 py-3">Product name
+              <th scope="col" class="px-4 py-3">اسم المنتج
                 <svg [appSort]="itemsToDisplay" data-order="desc" data-name="name" xmlns="http://www.w3.org/2000/svg"
                   class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor" viewBox="0 0 320 512">
                   <path
                     d="M27.66 224h264.7c24.6 0 36.89-29.78 19.54-47.12l-132.3-136.8c-5.406-5.406-12.47-8.107-19.53-8.107c-7.055 0-14.09 2.701-19.45 8.107L8.119 176.9C-9.229 194.2 3.055 224 27.66 224zM292.3 288H27.66c-24.6 0-36.89 29.77-19.54 47.12l132.5 136.8C145.9 477.3 152.1 480 160 480c7.053 0 14.12-2.703 19.53-8.109l132.3-136.8C329.2 317.8 316.9 288 292.3 288z" />
                 </svg>
               </th>
-              <th scope="col" class="px-4 py-3">Category</th>
-              <th scope="col" class="px-4 py-3">Stock</th>
-              <th scope="col" class="px-4 py-3">Available</th>
-              <th scope="col" class="px-4 py-3">Description</th>
-              <th scope="col" class="px-4 py-3">Price
+              <th scope="col" class="px-4 py-3">الفئة</th>
+              <th scope="col" class="px-4 py-3">العدد بالمخزن</th>
+              <th scope="col" class="px-4 py-3">متاح</th>
+              <th scope="col" class="px-4 py-3">وصف المنتج</th>
+              <th scope="col" class="px-4 py-3">السعر
                 <svg [appSort]="itemsToDisplay" data-order="asc" data-name="price" xmlns="http://www.w3.org/2000/svg"
                   class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor" viewBox="0 0 320 512">
                   <path
@@ -138,7 +135,7 @@
                         d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10">
                       </path>
                     </svg>
-                    Edit
+                    تعديل
                   </button>
                   <button type="button" (click)="toggleDeleteProductModal(product)"
                     class="text-red-700 px-2 py-1  hover:text-white border border-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-3xl text-sm text-center inline-flex items-center">
@@ -148,7 +145,7 @@
                         d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0">
                       </path>
                     </svg>
-                    Delete
+                    حذف
                   </button>
 
                 </td>
@@ -157,6 +154,7 @@
             </ng-container>
             <ng-template #noproducts>
               <tr>
+                <td></td>
                 <td></td>
                 <td></td>
                 <div
@@ -169,8 +167,8 @@
                       clip-rule="evenodd"></path>
                   </svg>
                   <span class="sr-only">Info</span>
-                  <div>
-                    <span class="font-medium"> alert!</span> No products Found
+                  <div class="ml-auto">
+                    <span class="font-medium"> عفوا!</span> لا توجد نتائج متاحه
                   </div>
                 </div>
               </tr>
@@ -182,18 +180,16 @@
       <nav class="flex flex-col md:flex-row justify-between items-start md:items-center space-y-3 md:space-y-0 p-4"
         aria-label="Table navigation">
         <span class="text-sm font-normal text-gray-500 :text-gray-400">
-          Rows per page
+          
           <span class="font-semibold text-gray-900 ">
-            <select name="items-length" id="items-length" (change)="handleItemsLength($event)">
+            <select name="items-length" id="items-length" class="p-2 rounded-3xl" (change)="handleItemsLength($event)">
               <option value="2">2</option>
               <option value="5">5</option>
               <option value="10">10</option>
               <option value="15">15</option>
             </select>
           </span>
-          <!-- of total -->
-          <!-- <span class="font-semibold text-gray-900 ">{{ totalItems }}</span>
-                                                                                                              item -->
+          عدد الصفوف للصفحة
         </span>
         <!-- Previous Button -->
         <div class="flex">
@@ -205,11 +201,11 @@
                 d="M7.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l2.293 2.293a1 1 0 010 1.414z"
                 clip-rule="evenodd"></path>
             </svg>
-            Previous
+            السابق
           </button>
           <button [disabled]="(currentPage === totalPages-1)" (click)="onNext()"
             class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-3xl hover:bg-gray-100 hover:text-gray-700 disabled:cursor-not-allowed disabled:bg-gray-100 disabled:text-gray-700">
-            Next
+            التالي
             <svg aria-hidden="true" class="w-5 h-5 ml-2" fill="currentColor" viewBox="0 0 20 20"
               xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd"
