--- a/src/app/pages/dashboard/components/orders/orders.component.html
+++ b/src/app/pages/dashboard/components/orders/orders.component.html
@@ -19,7 +19,7 @@
       <label class="mx-1" for="to-date">التاريخ الى</label>
     </div>
   </div>
-  <div class="relative rounded-3xl border-2 border-dashed border-gray-200 mx-auto h-96 overflow-y-scroll">
+  <!-- <div class="relative rounded-3xl border-2 border-dashed border-gray-200 mx-auto h-96 overflow-y-scroll">
     <table class="w-full text-sm text-center text-gray-500 ">
       <thead class=" text-md text-gray-700 uppercase bg-gray-50 ">
         <tr>
@@ -111,5 +111,6 @@
               </ng-template>
       </tbody>
     </table>
-    </div>
-</section>
+    </div> -->
+    <app-orders-grid></app-orders-grid>
+    </section>
