--- a/src/app/pages/dashboard/views/footer/footer.component.html
+++ b/src/app/pages/dashboard/views/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="w-full mx-auto max-w-screen-3xl p-4 md:flex md:items-center md:justify-between">
     <span class="text-sm text-gray-500 sm:text-center ">© 2023 <a
         class="hover:underline">made with ❤️ by <i class="hover:underline bg-white"> <a href="https://www.linkedin.com/in/saied-samaka-513a0518b"
-            target="_blank"> Saied Samaka </a></i></a>. All Rights Reserved.
+            target="_blank"> Saied Samaka </a></i></a>. .
     </span>
     <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 sm:mt-0">
       <li>
