--- a/src/app/pages/settings/components/home/home.component.html
+++ b/src/app/pages/settings/components/home/home.component.html
@@ -17,7 +17,7 @@
           <app-user-card></app-user-card>
         <div class="col-span-3 border-2 border-dashed rounded-3xl border-gray-300  sm:col-span-2">
           <section class="">
-            <div class="max-w-2xl px-4 py-8 mx-auto lg:py-16">
+            <div class=" px-4 py-8 mx-auto lg:py-16 ">
               <h2 class="mb-4 text-xl font-bold text-gray-900 "> تحديث المعلومات</h2>
               <form>
                 <div class="grid gap-4 mb-4 sm:grid-cols-3 sm:gap-6 sm:mb-5">
