--- a/src/app/shared/user-card/user-card.component.html
+++ b/src/app/shared/user-card/user-card.component.html
@@ -1,4 +1,4 @@
-<div class="border-2 border-dashed rounded-3xl border-gray-300 md:max-w-2xl col-span-full sm:col-span-1 min-h-full">
+<div class=" border-2 border-dashed rounded-3xl border-gray-300 w-full col-span-full md:col-span-1 min-h-full">
   <a class="flex flex-col items-center  rounded-3xl  md:flex-row min-h-full ">
     <img class="object-cover w-full rounded-t-lg  md:h-auto md:w-48 md:rounded-none md:rounded-l-lg" src="" alt="">
     <div class="flex flex-col justify-between p-4 leading-normal text-left">
@@ -6,11 +6,11 @@
         {{user?
         user?.username:
         'Your user name'}}</h5>
-      <p class=" font-normal text-gray-700 ">Email</p>
+      <p class=" font-semibold text-gray-700 ">البريد الالكتروني</p>
       <h3 class=" text-xl  tracking-tight ">{{user?user?.email: 'your.mail@example.com' }}</h3>
-      <p class=" font-normal text-gray-700 ">Phone Number</p>
+      <p class=" font-semibold text-gray-700 ">رقم الجوال</p>
       <h3 class=" text-xl  tracking-tight ">{{user? user?.phonenumber : "011-50567130" }}</h3>
-      <p class=" font-normal text-gray-700 ">Role</p>
+      <p class=" font-semibold text-gray-700 ">الصلاحية</p>
       <h3 class=" text-xl  tracking-tight ">{{user ? user.role?.name: 'user' }}</h3>
     </div>
   </a>
