--- a/src/app/pages/auth/components/signup/signup.component.html
+++ b/src/app/pages/auth/components/signup/signup.component.html
@@ -146,6 +146,9 @@
             <p class="mt-2 text-sm text-red-600 dark:text-red-500" *ngIf="authForm.errors['noConnection']">
               عفوا, يرجى التحقق من اتصال الانترنت
             </p>
+            <p class="mt-2 text-sm text-red-600 dark:text-red-500" *ngIf="authForm.errors['alreadyUsedMailError']">
+              البريد الالكتروني مستخدم بالفعل
+            </p>
             <p class="mt-2 text-sm text-red-600 dark:text-red-500" *ngIf="authForm.errors['unknownError']">
               خطأ غير متوقع
             </p>
