--- a/src/app/pages/auth/components/signup/signup.component.html
+++ b/src/app/pages/auth/components/signup/signup.component.html
@@ -1,4 +1,4 @@
-<section class="container m-auto mt-20 relative">
+<section class="container m-auto mt-16 relative">
   <div
     class="absolute top-[4%] right-8 w-72 h-72 rounded-full bg-red-500 mix-blend-multiply filter blur-3xl  animation-delay-2000">
   </div>
@@ -70,20 +70,20 @@
           </div>
           
           <div class="col-span-3 mx-auto">
-            <app-input [control]="authForm.get('lastname')" placeholder="الاسم الاخير" type="text" label="" size="25" maxlength="50"
+            <app-input [control]="authForm.get('lastname')" placeholder="الاسم الاخير" type="text" label="" size="25" maxlength="15"
               autofocus="true" required="true"></app-input>
           </div>
           <div class="col-span-3 mx-auto">
             <app-input [control]="authForm.get('firstname')" placeholder="الاسم الاول" type="email" label="" size="25"
-              maxlength="50" autofocus="true" required="true"></app-input>
+              maxlength="15" autofocus="true" required="true"></app-input>
           </div>
           <div class="col-span-4 mx-auto">
             <app-input [control]="authForm.get('email')" placeholder="البريد الالكتروني" type="email" label="" size="37"
-              maxlength="50" autofocus="true" required="true" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"></app-input>
+              maxlength="25" autofocus="true" required="true" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"></app-input>
           </div>
           <div class="col-span-2 mx-auto">
             <app-input [control]="authForm.get('phonenumber')" placeholder=" رقم الجوال" type="email" label="" size="12"
-              maxlength="50" autofocus="true" required="true"></app-input>
+              maxlength="25" autofocus="true" required="true"></app-input>
           </div>
           <div class="col-span-6 mx-auto">
             <app-input [control]="authForm.get('password')" placeholder="كلمة المرور" [type]="showPassword ? 'text':'password'"
@@ -107,7 +107,7 @@
           </div>
             <div class="col-span-6 mx-auto">
               <app-input [control]="authForm.get('passwordConfirmation')" placeholder="كلمة المرور التأكيدية"
-                [type]="showPassword ? 'text':'password'" label="" minlength="8" maxlength="18" required="true" pattern=".{8,}"
+                [type]="showPassword ? 'text':'password'" label="" minlength="8" maxlength="12" required="true" pattern=".{8,}"
                 title="8 حروف او اكثر" size="60">
               <svg class="absolute left-10 bottom-3 text-gray-400 hover:text-gray-900" fill="none" stroke="currentColor"
                 stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
@@ -119,7 +119,7 @@
               </svg>
               <svg class="absolute left-10 bottom-3 text-gray-400 hover:text-gray-900" fill="none" stroke="currentColor"
                 stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
-                (click)="togglePassword()" *ngIf="showPasswordConfirmation" input-icon>
+                (click)="togglePasswordConfirmation()" *ngIf="showPasswordConfirmation" input-icon>
                 <path stroke-linecap="round" stroke-linejoin="round"
                   d="M3.98 8.223A10.477 10.477 0 001.934 12C3.226 16.338 7.244 19.5 12 19.5c.993 0 1.953-.138 2.863-.395M6.228 6.228A10.45 10.45 0 0112 4.5c4.756 0 8.773 3.162 10.065 7.498a10.523 10.523 0 01-4.293 5.774M6.228 6.228L3 3m3.228 3.228l3.65 3.65m7.894 7.894L21 21m-3.228-3.228l-3.65-3.65m0 0a3 3 0 10-4.243-4.243m4.242 4.242L9.88 9.88">
                 </path>
@@ -136,21 +136,10 @@
               </span>
             </label>
           </div>
-          <div *ngIf="authForm.errors" class="col-span-6">
-            <p class="mt-2 text-sm text-red-600 dark:text-red-500" *ngIf="authForm.errors.credentials">
-              البريد الالكتروني او كلمة المرور غير صحيحة
-            </p>
-            <p class="mt-2 text-sm text-red-600 dark:text-red-500" *ngIf="authForm.errors['passwordsDontMatch']">
+          <div *ngIf="authForm.dirty &&authForm.errors " class="col-span-6">
+            <p class=" text-sm text-red-600 "
+              *ngIf=" authForm.controls.passwordConfirmation.dirty && authForm.errors['passwordsDontMatch']">
               كلمة المرور غير متطابقة
-            </p>
-            <p class="mt-2 text-sm text-red-600 dark:text-red-500" *ngIf="authForm.errors['noConnection']">
-              عفوا, يرجى التحقق من اتصال الانترنت
-            </p>
-            <p class="mt-2 text-sm text-red-600 dark:text-red-500" *ngIf="authForm.errors['alreadyUsedMailError']">
-              البريد الالكتروني مستخدم بالفعل
-            </p>
-            <p class="mt-2 text-sm text-red-600 dark:text-red-500" *ngIf="authForm.errors['unknownError']">
-              خطأ غير متوقع
             </p>
           </div>
           <div class="col-span-6">
@@ -197,3 +186,5 @@
     </main>
   </div>
 </section>
+<!-- Toast -->
+<app-toast *ngIf="showToast" toastType="error" [toastMessage]="toastMessage" (dismiss)="toggleToast()"></app-toast>
