--- a/src/app/pages/index/views/product-card/product-card.component.html
+++ b/src/app/pages/index/views/product-card/product-card.component.html
@@ -192,4 +192,4 @@
 </div>
 <!-- Toast -->
 <app-toast *ngIf="showToastMssg" (dismiss)="toggleToastMssg()" toastType="warning"
-  toastMessage="يلزم تسجيل الدخول لاضافة عناصر بالسله"></app-toast>
+  toastMessage="يلزم تسجيل الدخول"></app-toast>
