--- a/src/app/pages/index/components/home/home.component.html
+++ b/src/app/pages/index/components/home/home.component.html
@@ -109,7 +109,7 @@
   
         <div class="mt-6 space-y-12 lg:grid lg:grid-cols-3 lg:gap-x-6 lg:space-y-0">
           <!-- category card  -->
-          <div class="group relative" *ngFor="let category of categories">
+          <div class="group relative" *ngFor="let category of categories" routerLink="all-products">
             <div
               class="relative h-80 w-full overflow-hidden rounded-3xl bg-white sm:aspect-h-1 sm:aspect-w-2 lg:aspect-h-1 lg:aspect-w-1 group-hover:opacity-75 sm:h-64">
               <img [src]="category.category_img" [alt]="category.name"
