--- a/src/app/pages/dashboard/components/products/products.component.html
+++ b/src/app/pages/dashboard/components/products/products.component.html
@@ -466,5 +466,7 @@
     </div>
   </div>
 </app-modal>
-<!-- toast  -->
-<app-toast *ngIf="showToast" (dismiss)="toggleToast()"></app-toast>
+<!-- Toast -->
+<app-toast *ngIf="showErrToast" toastType="error" [toastMessage]="toastErrMessage"
+  (dismiss)="toggleErrToast()"></app-toast>
+<app-toast *ngIf="showSucsessToast" [toastMessage]="toastSucsessMessage" (dismiss)="toggleSucsessToast()"></app-toast>
