--- a/src/app/pages/dashboard/views/info-cards/info-cards.component.html
+++ b/src/app/pages/dashboard/views/info-cards/info-cards.component.html
@@ -1,4 +1,5 @@
 <div class="grid grid-cols-3 gap-4 mb-4 items-center">
+  <div class="col-span-full md:col-span-1">
   <div class="flex items-center justify-center p-1 ">
     <div class="w-full p-6 border-2 border-gray-200 border-dashed rounded-3xl">
       <div class="flex flex-row-reverse ">
@@ -34,6 +35,8 @@
       </div>
     </div>
   </div>
+  </div>
+  <div class="col-span-full md:col-span-1">
   <div class="flex items-center justify-center p-1 ">
     <div class="w-full p-6 border-2 border-gray-200 border-dashed rounded-3xl">
       <div class="flex flex-row-reverse items-center gap-2">
@@ -67,10 +70,11 @@
           </div>
           <button type="button"
             class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">
-            <svg
-              fill="none" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24"
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
               xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3"></path>
+              <path stroke-linecap="round" stroke-linejoin="round"
+                d="M6.72 13.829c-.24.03-.48.062-.72.096m.72-.096a42.415 42.415 0 0110.56 0m-10.56 0L6.34 18m10.94-4.171c.24.03.48.062.72.096m-.72-.096L17.66 18m0 0l.229 2.523a1.125 1.125 0 01-1.12 1.227H7.231c-.662 0-1.18-.568-1.12-1.227L6.34 18m11.318 0h1.091A2.25 2.25 0 0021 15.75V9.456c0-1.081-.768-2.015-1.837-2.175a48.055 48.055 0 00-1.913-.247M6.34 18H5.25A2.25 2.25 0 013 15.75V9.456c0-1.081.768-2.015 1.837-2.175a48.041 48.041 0 011.913-.247m10.5 0a48.536 48.536 0 00-10.5 0m10.5 0V3.375c0-.621-.504-1.125-1.125-1.125h-8.25c-.621 0-1.125.504-1.125 1.125v3.659M18 10.5h.008v.008H18V10.5zm-3 0h.008v.008H15V10.5z">
+              </path>
             </svg>
             طباعة تقرير بالطلبات
             </button>
@@ -78,6 +82,8 @@
       </div>
     </div>
   </div>
+  </div>
+  <div class="col-span-full md:col-span-1">
   <div class="flex items-center justify-center p-1 ">
     <div class="w-full p-6 border-2 border-gray-200 border-dashed rounded-3xl">
       <div class="flex flex-row-reverse items-center gap-2">
@@ -113,15 +119,17 @@
           </div>
           <button type="button"
             class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">
-            <svg
-              fill="none" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24"
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
               xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3"></path>
+              <path stroke-linecap="round" stroke-linejoin="round"
+                d="M12 9.75v6.75m0 0l-3-3m3 3l3-3m-8.25 6a4.5 4.5 0 01-1.41-8.775 5.25 5.25 0 0110.233-2.33 3 3 0 013.758 3.848A3.752 3.752 0 0118 19.5H6.75z">
+              </path>
             </svg>
-            طباعة تقرير بالارباح
+            تنزيل تقرير بالارباح
             </button>
         </div>
       </div>
     </div>
+  </div>
   </div>
 </div>
