--- a/src/app/pages/checkout/components/index/index.component.html
+++ b/src/app/pages/checkout/components/index/index.component.html
@@ -23,7 +23,7 @@
         </div>
       </div>
       <!-- Payement Datails Component -->
-      <app-payement-datails></app-payement-datails>
+      <app-payement-datails [cartItems]="cartItems"></app-payement-datails>
       <!-- Payement Datails Component -->
                 </main>
                 </div>
