--- a/src/app/pages/dashboard/views/orders-grid/orders-grid.component.html
+++ b/src/app/pages/dashboard/views/orders-grid/orders-grid.component.html
@@ -39,19 +39,17 @@
             </b>
           </td>
           <td class="px-6 py-4">
-            <div class="flex items-center space-x-3">
               <div>
                 <label
                   class="bg-gray-50  border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 ">{{order.user.username}}</label>
               </div>
-            </div>
           </td>
           <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
             {{(order.orderStatus===0 ? 'proccessed' : (order.orderStatus=== 1?'delivered':(order.orderStatus=== 2?
             'shipped':(order.orderStatus===3? 'canceled': "unkown"))))}}
           </td>
           <td class="px-6 py-4">
-            <button type="button" (click)="true" *ngIf="order.orderStatus === 0"
+            <button type="button" (click)="cancelOrder(order.id)" *ngIf="order.orderStatus === 0"
               class="text-red-700 px-2 py-1 border hover:border-gray-400  focus:ring-4 focus:outline-none focus:ring-red-300 font-medium hover:bg-gray-200 rounded-3xl text-sm text-center inline-flex items-center">
               <svg class="w-5 h-5 mr-1" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
