--- a/src/app/pages/dashboard/components/users/users.component.html
+++ b/src/app/pages/dashboard/components/users/users.component.html
@@ -234,7 +234,7 @@
           <input formControlName="email" class="border border-gray-300 rounded-3xl p-2 text-right" />
         </div>
         <div class="flex col-span-2">
-          <div class="flex flex-col">
+          <div class="flex flex-col w-full">
           <label class="text-sm font-semibold text-gray-900 mb-2">رقم الجوال</label>
           <input formControlName="phonenumber" class="border border-gray-300 rounded-3xl p-2 text-right" />
         </div>
