--- a/src/app/pages/profile/components/home/home.component.html
+++ b/src/app/pages/profile/components/home/home.component.html
@@ -48,56 +48,54 @@
       <div class="border-2 border-dashed rounded-3xl border-gray-300 p-4 mb-4">
         <h3 class="text-3xl p-4 text-center"> طلباتي</h3>
         <section class="border-2 border-dashed border-gray-200  overflow-auto rounded-3xl w-full p-4 sm:p-5">
-          <div class="relative rounded-3xl border border-dashed border-gray-200 mx-auto h-96 overflow-y-scroll">
-            <table class="w-full text-sm text-left text-gray-500  ">
-              <thead class=" text-xs text-gray-700 uppercase bg-gray-50 rounded-t-3xl">
+          <div class="relative rounded-3xl border-2 border-dashed border-gray-200 mx-auto h-96 overflow-y-scroll">
+            <table class="w-full text-sm text-center text-gray-500 ">
+              <thead class=" text-md text-gray-700 uppercase bg-gray-50 ">
                 <tr>
                   <th scope="col" class="px-6 py-3">
                     <span class="sr-only">Image</span>
                   </th>
                   <th scope="col" class="px-6 py-3">
-                    Order Id
+                    مسلسل المنتج
                   </th>
                   <th scope="col" class="px-6 py-3">
-                    Products List
+                    قائمة المنتجات
                   </th>
                   <th scope="col" class="px-6 py-3">
-                    Status
+                    العميل
                   </th>
                   <th scope="col" class="px-6 py-3">
-                    Price
+                    الحالة
                   </th>
                   <th scope="col" class="px-6 py-3 mx-1">
-                    Action
+                    الاجراء
                   </th>
                 </tr>
               </thead>
-              <tbody class=" ">
+              <tbody class="">
                 <ng-container *ngIf="orders.length > 0; else noorders">
-                  <tr class=" border-b hover:bg-gray-50" *ngFor="let product of order.products">
-                    <td class="w-32 p-4">
-                      <img [src]="product.product_img" [alt]="product.name">
+                  <tr class="border-b hover:bg-gray-50" *ngFor="let order of orders">
+                    <td class="w-20 p-2 flex gap-x-1">
+                      <img *ngFor="let product of order.products" [src]="product.product_img" [alt]="product.name">
+          
                     </td>
                     <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
                       #{{order.id}}
                     </td>
                     <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
                       <b *ngFor="let product of order.products">
-                        {{product.name}}
+                        {{product.name}},
                       </b>
                     </td>
                     <td class="px-6 py-4">
-                      <div class="flex items-center space-x-3">
+                      <div>
                         <label
-                          class="bg-gray-50  border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 "
-                          [ngClass]="order.orderStatus===3?'bg-red-500 text-white':''">{{(order.orderStatus===0
-                          ? 'proccessed' : (order.orderStatus===
-                          1?'delivered':(order.orderStatus=== 2?
-                          'shipped':(order.orderStatus===3? 'canceled': "unkown"))))}}</label>
+                          class="bg-gray-50  border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 ">{{order.user.username}}</label>
                       </div>
                     </td>
                     <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-                      $599
+                      {{(order.orderStatus===0 ? 'proccessed' : (order.orderStatus=== 1?'delivered':(order.orderStatus=== 2?
+                      'shipped':(order.orderStatus===3? 'canceled': "unkown"))))}}
                     </td>
                     <td class="px-6 py-4">
                       <button type="button" (click)="cancelOrder(order.id)" *ngIf="order.orderStatus === 0"
@@ -106,18 +104,34 @@
                           xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                           <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path>
                         </svg>
-                        Cancel
+                        الغاء
                       </button>
                     </td>
                   </tr>
-                  </ng-container>
+                </ng-container>
                 <ng-template #noorders>
-                  <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td>
-                      <h3 class="font-semibold text-2xl"> ليست لديك طلبات حتى الان</h3>
+                  <tr class="border-b hover:bg-gray-50">
+                    <td class="w-20 p-2 flex gap-x-1">
+          
+                    </td>
+                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+          
+                    </td>
+                    <td class="px-6 py-4 font-semibold text-gray-900 text-right">
+                      No Orders Found
+                    </td>
+                    <td class="px-6 py-4">
+                      <div class="flex items-center space-x-3">
+                        <div>
+          
+                        </div>
+                      </div>
+                    </td>
+                    <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+          
+                    </td>
+                    <td class="px-6 py-4">
+          
                     </td>
                   </tr>
                 </ng-template>
