--- a/src/app/pages/profile/components/home/home.component.html
+++ b/src/app/pages/profile/components/home/home.component.html
@@ -56,13 +56,13 @@
                     <span class="sr-only">Image</span>
                   </th>
                   <th scope="col" class="px-6 py-3">
-                    مسلسل المنتج
+                    مسلسل الطلب
                   </th>
                   <th scope="col" class="px-6 py-3">
                     قائمة المنتجات
                   </th>
                   <th scope="col" class="px-6 py-3">
-                    العميل
+                    الاجمالي
                   </th>
                   <th scope="col" class="px-6 py-3">
                     الحالة
@@ -90,7 +90,7 @@
                     <td class="px-6 py-4">
                       <div>
                         <label
-                          class="bg-gray-50  border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 ">{{order.user.username}}</label>
+                          class="bg-gray-50  border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 ">{{order.totalPrice}}</label>
                       </div>
                     </td>
                     <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
@@ -118,7 +118,7 @@
           
                     </td>
                     <td class="px-6 py-4 font-semibold text-gray-900 text-right">
-                      No Orders Found
+                    لا توجد طلبات متاحة
                     </td>
                     <td class="px-6 py-4">
                       <div class="flex items-center space-x-3">
