--- a/src/app/shared/cart-items/cart-items.component.html
+++ b/src/app/shared/cart-items/cart-items.component.html
@@ -57,7 +57,7 @@
 </div>
 </td>
 <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
-  ${{item.product?.price ? item.product?.price :"N/A"}}
+  ${{item.price ? item.price :"N/A"}}
 </td>
 <td class="px-6 py-4">
   <a class="font-medium text-red-600 hover:underline" (click)="deleteCartItem(item.id)">
