--- a/src/app/pages/checkout/components/index/index.component.html
+++ b/src/app/pages/checkout/components/index/index.component.html
@@ -4,10 +4,10 @@
     <main class="p-4  h-auto pt-20 relative">
         <!-- animated blured divs -->
       <div
-        class="absolute top-[4%] left-[4%] w-72 h-72 rounded-full bg-red-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
+        class="absolute top-[4%] left-[4%] w-72 h-72 rounded-full bg-gray-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
       </div>
       <div
-        class="absolute top-[25%] right-[4%] w-72 h-72 rounded-full bg-gray-500 mix-blend-multiply filter blur-3xl animation-delay-4000">
+        class="absolute top-[25%] right-[4%] w-72 h-72 rounded-full bg-red-500 mix-blend-multiply filter blur-3xl animation-delay-4000">
       </div>
       <div
         class="absolute bottom-[4%] right-[4%] w-72 h-72 rounded-full bg-pink-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
