--- a/src/app/pages/profile/components/home/home.component.html
+++ b/src/app/pages/profile/components/home/home.component.html
@@ -7,15 +7,15 @@
       <div class="grid grid-cols-3 gap-4 mb-4">
         <!-- animated blured divs -->
         <div
-          class="absolute top-[0%] left-0 w-72 h-72 rounded-full bg-red-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
+          class="absolute top-[0%] left-0 w-72 h-72 rounded-full bg-gray-300 mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
         </div>
         <div
-          class="absolute top-[25%] right-0 w-72 h-72 rounded-full bg-gray-500 mix-blend-multiply filter blur-3xl animation-delay-4000">
+          class="absolute top-[25%] right-0 w-72 h-72 rounded-full bg-red-300 mix-blend-multiply filter blur-3xl animation-delay-4000">
         </div>
         <div
-          class="absolute bottom-0 right-12 w-72 h-72 rounded-full bg-pink-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
+          class="absolute bottom-0 right-12 w-72 h-72 rounded-full bg-pink-300 mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
         </div>
-        <app-user-card></app-user-card>
+        <app-user-card class="col-span-full md:col-span-1"></app-user-card>
         <div class="col-span-3 border-2 border-dashed rounded-3xl border-gray-300  sm:col-span-2">
           <section class="border-2 border-dashed border-gray-200 rounded-3xl my-2 mx-2 p-4 sm:p-5">
             <!-- tab-bar -->
