--- a/src/app/pages/settings/components/home/home.component.html
+++ b/src/app/pages/settings/components/home/home.component.html
@@ -6,10 +6,10 @@
       <div class="grid grid-cols-3 gap-4 mb-4">
           <!-- animated blured divs -->
           <div
-            class="absolute top-[8%] left-[2%] w-72 h-72 rounded-full bg-red-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
+            class="absolute top-[8%] left-[2%] w-72 h-72 rounded-full bg-gray-400 mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
           </div>
           <div
-            class="absolute top-[25%] right-[2%] w-72 h-72 rounded-full bg-gray-500 mix-blend-multiply filter blur-3xl animation-delay-4000">
+            class="absolute top-[25%] right-[2%] w-72 h-72 rounded-full bg-red-400 mix-blend-multiply filter blur-3xl animation-delay-4000">
           </div>
           <div
             class="absolute bottom-[0%] right-[14%] w-72 h-72 rounded-full bg-pink-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
