--- a/src/app/pages/checkout/views/payement-datails/payement-datails.component.html
+++ b/src/app/pages/checkout/views/payement-datails/payement-datails.component.html
@@ -5,63 +5,7 @@
     <span class="mx-1 text-red-400">خدمة الدفع غير مدعومة بعد</span>
   </h3>
   <div class="grid grid-cols-3 gap-4  p-2">
-  <div class="col-span-3 lg:col-span-2 rounded-3xl border-2 border-dashed p-2 ">
-    <p class="text-gray-700">عنوان الشحن </p>
-    <div class="grid gap-4 mb-4 sm:grid-cols-2">
-  
-      <div>
-        <label for="city" class="block mb-2 text-sm font-medium text-gray-900 ">
-          <span>*</span>
-          <span>مدينة</span>
-        </label>
-        <input type="number"
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-          >
-      </div>
-      <div>
-        <label for="governorate" class="block mb-2 text-sm font-medium text-gray-900 :text-white">
-          <span>*</span>
-          <span>محافظة</span>
-        </label>
-        <input type=""
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-          >
-      </div>
-  
-      <div>
-        <label for="street" class="block mb-2 text-sm font-medium text-gray-900 ">
-          <span>*</span>
-          <span>شارع</span>
-        </label>
-        <input name="street" id="street"
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-          >
-      </div>
-      <div>
-        <label for="neighborhood" class="block mb-2 text-sm font-medium text-gray-900 ">
-          <span>*</span>
-          <span>حي</span>
-        </label>
-        <input type="text"
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"
-          >
-      </div>
-    </div>
-    <!-- Actions  -->
-    <div class="flex items-center gap-x-3">
-      <button
-        class="mx-0.5 bg-gradient-to-bl from-blue-400 to-blue-700 inline-block px-5 py-2 my-1 text-white font-semibold border-solid border-2 border-gray-200 rounded-3xl shadow-inner hover:bg-gradient-to-br"
-        (click)="true">
-        حفظ البيانات
-      </button>
-    <button
-      class="mx-0.5 bg-gradient-to-bl from-red-400 to-red-700 inline-block px-5 py-2 my-1 text-white font-semibold border-solid border-2 border-gray-200 rounded-3xl shadow-inner hover:bg-gradient-to-br"
-      (click)="true">
-      افراغ البيانات
-    </button>
-    </div>
-    <!-- Actions  -->
-    </div>
+  <app-address-cart class="col-span-3 lg:col-span-2"></app-address-cart>
     <div class="col-span-3 lg:col-span-1 rounded-3xl border-2 border-dashed p-2">
       <p class="text-gray-700">استخدم احدى البطاقات المحفوظة</p>
       <div class="flex justify-center items-center mt-4">
